--- a/mirroring.html
+++ b/mirroring.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="moreJS.js"></script>
     <script src="moreDOM.js"></script>
-    <script src="http://localhost/friendlycode/slowparse/slowparse.js"></script>
-    <script src="mirroring.js"></script>
+    <script src="slowparse.js"></script>
+    <script src="mirror.js"></script>
   </head>
 
   <body>
@@ -16,6 +16,7 @@
     <section>
 
       <!-- 'codemirror'esque -->
+      <!--
       <textarea>
         <p>test paragraph 1</p>
         <input type="text" value="tp1"><br>
@@ -39,6 +40,10 @@
             <input type="text" value="tp4">
           </section>
         </div>
+      </textarea>
+      -->
+      <textarea>
+      <p>This is a test</p>
       </textarea>
 
       <!-- live render pane, updating only bits from the textarea that changed -->
