replaced useless width attribute for the iframe with not-useless style width rule

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <section>
       <!-- section one -->
       <textarea id="one" nowrap wrap="off">
-<iframe width="100%" src="http://www.youtube.com/embed/8uDuls5TyNE" frameborder="0" allowfullscreen></iframe>
+<iframe style="width: 100%" src="http://www.youtube.com/embed/8uDuls5TyNE" frameborder="0" allowfullscreen></iframe>
 
 <p>test paragraph 1</p>
 <input type="text" value="tp1"><br>
