style as .css file instead

--- a/index.html
+++ b/index.html
@@ -5,41 +5,7 @@
     <title>DOM diff test</title>
     <script src="DOM-diff.js"></script>
     <script src="slowparse.js"></script>
-    <style>
-      body {
-        background-color: #FFFFE0;
-      }
-      
-      h1 {
-        text-align: center;
-      }
-      section {
-        width: 100%;
-        text-align: justify;
-      }
-
-      textarea, iframe {
-        display: inline-block;
-        width: 24.5%;
-        margin: 0;
-        padding: 0;
-        height: 400px;
-        border: 1px solid black;
-        overflow-x: scroll;
-        font-size: 90%;
-        font-family: monospace;
-        background-color: white;
-      }
-      
-      .textblock {
-        width: 800px;
-        margin: auto;
-        margin-bottom: 1em;
-        border: 1px solid brown;
-        background-color: #FFFFF0;
-        padding: 0 0.5em;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
