--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       
       <p>Right here. You're actually on a github page, and the code is
       housed in the same place. For the code view, just head over to
-      <a href=https://github.com/Pomax/DOM-diff/tree/gh-pages">this view instead</a>.
+      <a href="https://github.com/Pomax/DOM-diff/tree/gh-pages">this view instead</a>.
       It needs a bit of cleanup and refractoring, but feel free to play
       with it, and let me know if you run across any bugs. Things can
       only get better =)</p>
