--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>DOM diff test</title>
-    <script src="DOM-diff.js"></script>
-    <script src="slowparse.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
 
@@ -122,6 +120,9 @@
       </iframe>
     </section>
 
+    <script src="slowparse.js"></script>
+    <script src="DOM-diff.js"></script>
+    <script src="Frame.js"></script>
     <script src="behaviour.js"></script>
   </body>
 </html>
