--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </section>
 
     <script src="slowparse.js"></script>
-    <script src="DOM-diff.js"></script>
+    <script src="DOM-diff-min.js"></script>
     <script src="Frame.js"></script>
     <script src="behaviour.js"></script>
   </body>
